# Static-Reflection-Example-Serialization-And-Comparison

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Foo.hpp  Serial_CRTP.hpp  Serial_Type_Traits.hpp  Utilities_Limited_Constexpr.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
